--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "mongoose": "^6.9.1",
-    "mysql": "^2.18.1"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
